[package]
name = "spam-align"
version = "0.1.0"
authors = ["robinwilliam.hundt <robinwilliam.hundt@stud.uni-goettingen.de>"]
edition = "2018"

[dependencies]
bio = "0.26.1"
serde = {version = "1.0.91", features = ["derive"]}
itertools = "0.8.0"
rayon = "1.0.3"
structopt = "0.2.16"
ndarray = "0.12.1"
rand = "0.7.0"
fxhash = "0.2.1"
smallvec = "0.6.11"
petgraph = "0.4.13"
num-integer = "0.1.41"
quick-xml = {version = "0.17.2", features = ["serialize"]}
serde_json = "1.0.44"
indicatif = {version = "0.13.0", features = ["with_rayon"]}
