[package]
name = "spam-align"
version = "0.1.0"
authors = ["robinwilliam.hundt <robinwilliam.hundt@stud.uni-goettingen.de>"]
edition = "2018"

[dependencies]
bio = "0.30.0"
serde = { version = "1.0.105", features = ["derive"] }
itertools = "0.9.0"
rayon = "1.3.0"
structopt = "0.3.12"
ndarray = "0.13.0"
rand = "0.7.3"
fxhash = "0.2.1"
smallvec = "1.2.0"
petgraph = "0.5.0"
num-integer = "0.1.42"
quick-xml = { version = "0.18.1", features = ["serialize"] }
serde_json = "1.0.48"
indicatif = { version = "0.14.0", features = ["with_rayon"] }
anyhow = "1.0.27"
fnv = "1.0.6"

[profile.release]
debug = true
