[package]
name = "spam-align"
version = "0.1.0"
authors = ["robinwilliam.hundt <robinwilliam.hundt@stud.uni-goettingen.de>"]
edition = "2018"

[dependencies]
bio = "0.30.0"
itertools = "0.9.0"
rayon = "1.3.0"
structopt = "0.3.12"
ndarray = "0.13.0"
rand = "0.7.3"
fxhash = "0.2.1"
smallvec = "1.2.0"
petgraph = "0.5.0"
indicatif = { version = "0.14.0"}
anyhow = "1.0.27"
quicksort = "1.1.0"
log = "0.4.8"
env_logger = "0.7.1"

[dev-dependencies]
criterion = "0.3.1"
rand = "0.7.3"

[[bench]]
name = "bench"
harness = false

[profile.release]
# This is needed when running the clion profiler
#debug = true

